k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiver
  labels:
    app: quiver
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: quiver
  type: ClusterIP
